--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,16 @@
 node_modules
+# Local .terraform directories
+terraform/.terraform
+
+# .tfstate files
+terraform/.terraform.lock.hcl
+terraform/*.tfstate
+terraform/*.tfstate.*
+
+# Crash log files
+terraform/crash.log
+terraform/crash.*.log
+
+# Exclude all .tfvars files, which are likely to contain sensitive data.
+terraform/*.tfvars
+terraform/*.tfvars.json
