--- a/AuthService/package.json
+++ b/AuthService/package.json
@@ -11,6 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.4.4"
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.4",
+    "jsonwebtoken": "^9.0.2",
+    "validator": "^13.11.0"
   }
 }
