--- a/workflow/cicd.yml
+++ b/workflow/cicd.yml
@@ -17,7 +17,7 @@ jobs:
         runs-on: ubuntu-latest
         defaults:
             run:
-                working-directory: "gateway" # Sets default path for "run" commands to the gateway subfolder.
+                working-directory: "MeetingService" # Sets default path for "run" commands to the gateway subfolder.
 
         # Sets environment variables with values extracted from GitHub Actions Repository Secrets.
         env:
@@ -37,17 +37,17 @@ jobs:
               with:
                   node-version: 19.9.0
                   cache: "npm"
-                  cache-dependency-path: "gateway/package-lock.json" # Path to package-lock.json in gateway subfolder.
+                  cache-dependency-path: "MeetingService/package-lock.json" # Path to package-lock.json in gateway subfolder.
 
             # Builds the Docker image.
             - name: Build
-              run: docker build -t $CONTAINER_REGISTRY_LOGIN_SERVER/gateway:$VERSION --file ./Dockerfile .
+              run: docker build -t $CONTAINER_REGISTRY_LOGIN_SERVER/MeetingService:$VERSION --file ./Dockerfile .
 
             # Publishes the Docker image to the Azure Container Registry.
             - name: Publish
               run: |
                   echo $CONTAINER_REGISTRY_PASSWORD | docker login $CONTAINER_REGISTRY_LOGIN_SERVER --username $CONTAINER_REGISTRY_USERNAME --password-stdin
-                  docker push $CONTAINER_REGISTRY_LOGIN_SERVER/gateway:$VERSION
+                  docker push $CONTAINER_REGISTRY_LOGIN_SERVER/MeetingService:$VERSION
 
             # Installs Kubectl and connects it to the Azure Kubernetes Service (AKS) cluster.
             # https://github.com/marketplace/actions/kubernetes-cli-kubectl
