--- a/MeetingService/kubernetes/deploy.yaml
+++ b/MeetingService/kubernetes/deploy.yaml
@@ -14,6 +14,6 @@ spec:
         spec:
             containers:
                 - name: my-container
-                  image: tsfn14g99.azurecr.io/f7a72784a24a:v1
+                  image: tsfn14g99.azurecr.io/meetingservice:v1.1
                   ports:
                       - containerPort: 8082
