--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "start": "node ./server.js",
         "dev": "nodemon ./server.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "jest"
     },
     "keywords": [],
     "author": "",
@@ -20,6 +20,7 @@
         "express": "^4.18.2",
         "express-session": "^1.17.3",
         "express-validator": "^7.0.1",
+        "jest": "^29.7.0",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^7.5.3"
     },
