--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -57,4 +57,4 @@ jobs:
             # Expands the manifest YAML file (i.e. replaces placeholders in the YAML file with environment variable values)
             # and deploys the microservice to the Azure Kubernetes Service (AKS) cluster.
             - name: Deploy
-              run: envsubst < kubernetes/deploy.yaml | kubectl apply -f -
+              run: envsubst < ../MeetingService/kubernetes/deploy.yaml | kubectl apply -f -
