--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -51,7 +51,7 @@ jobs:
               with:
                   node-version: 19.9.0
                   cache: "npm"
-                  cache-dependency-path: "MeetingService/../GateWayAPI/package-lock.json" # Path to package-lock.json in gateway subfolder.
+                  cache-dependency-path: ../GateWayAPI/package-lock.json" # Path to package-lock.json in gateway subfolder.
 
             # Builds the Docker image.
             - name: Build-gatway
