--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -17,7 +17,7 @@ jobs:
         runs-on: ubuntu-latest
         defaults:
             run:
-                working-directory: "MeetingService" # Sets default path for "run" commands to the gateway subfolder.
+                working-directory: "." # Sets default path for "run" commands to the gateway subfolder.
 
         # Sets environment variables with values extracted from GitHub Actions Repository Secrets.
         env:
@@ -51,7 +51,7 @@ jobs:
               with:
                   node-version: 19.9.0
                   cache: "npm"
-                  cache-dependency-path: ../GateWayAPI/package-lock.json" # Path to package-lock.json in gateway subfolder.
+                  cache-dependency-path: GateWayAPI/package-lock.json" # Path to package-lock.json in gateway subfolder.
 
             # Builds the Docker image.
             - name: Build-gatway
@@ -75,11 +75,11 @@ jobs:
             # and deploys the microservice to the Azure Kubernetes Service (AKS) cluster.
 
             - name: Deploy-gateway
-              run: envsubst < ../GateWayAPI/kubernetes/deploy.yaml | kubectl apply -f -
+              run: envsubst < GateWayAPI/kubernetes/deploy.yaml | kubectl apply -f -
 
             - uses: actions/checkout@v4
 
             - name: Deploy
-              run: envsubst < /kubernetes/deploy.yaml | kubectl apply -f -
+              run: envsubst < MeetingService/kubernetes/deploy.yaml | kubectl apply -f -
 
             - uses: actions/checkout@v4
