--- a/GateWayAPI/kubernetes/deploy-gateway.yaml
+++ b/GateWayAPI/kubernetes/deploy-gateway.yaml
@@ -26,3 +26,16 @@ spec:
           limits:
             cpu: 256m
             memory: 256Mi
+---
+  apiVersion: v1
+  kind: Service
+  metadata:
+    name: loadbalancergatewayapi
+  spec:
+    selector:
+      app: GateWayAPI
+    type: LoadBalancer
+    ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 4000
