--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -79,7 +79,7 @@ jobs:
 
             - uses: actions/checkout@v4
 
-            - name: Deploy-meeting
-              run: envsubst < ./MeetingService/kubernetes/deploy-meeting.yaml | kubectl apply -f -
+#            - name: Deploy-meeting
+#              run: envsubst < ./MeetingService/kubernetes/deploy-meeting.yaml | kubectl apply -f -
 
-            - uses: actions/checkout@v4
+#            - uses: actions/checkout@v4
